# tourniquet

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ERRORS.md  FEATURE_REQUESTS.md  HANDOFF.md  LICENSE  OJW_REVIEW_2026-06-09.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  fly.toml  fly.worker.toml  pyproject.toml  wrangler.toml
.claude/skills/ship/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: alerts-setup.md  api.md  architecture.md  code-review-remediation.md  data-residency.md  deploy.md  deployment.md  development.md  install.md  security-model.md  strategy.md
landing/: README.md  _headers  index.html  install.js  style.css
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_api_key_actions.py  0003_token_sha256_and_action_uniqueness.py  0004_fix_profile_default.py
packaging/: README.md
packaging/homebrew/: tourniquet.rb
packaging/scoop/: tourniquet.json
packaging/winget/: LowryDaniel.Tourniquet.installer.yaml
scripts/: bootstrap_local.py  fake_anthropic.py  init.py  insights.py  manage_keys.py
src/burnrate/: __init__.py  config.py  db.py  main.py  models.py
src/burnrate/alerts/: email.py
src/burnrate/auth/: magic_link.py
src/burnrate/billing/: caps.py  pricing.py  profiles.py
src/burnrate/dashboard/: routes.py
src/burnrate/providers/: __init__.py  anthropic.py
src/burnrate/proxy/: router.py
src/burnrate/triggers/: evaluator.py
src/tourniquet/: __init__.py  anthropic_admin.py  audit.py  cli.py  config.py  db.py  main.py  migrate.py  models.py  url_handler.py
src/tourniquet/alerts/: desktop.py  email.py  jsonl_log.py  mac.py  notifier.py  slack.py  slack_socket.py  telegram.py  telegram_callbacks.py  telegram_poller.py  webhook.py
src/tourniquet/analytics/: insights.py
src/tourniquet/auth/: magic_link.py
src/tourniquet/billing/: caps.py  formatting.py  pricing.py  profiles.py  suggestions.py
src/tourniquet/dashboard/: routes.py
src/tourniquet/providers/: anthropic.py
src/tourniquet/proxy/: router.py
src/tourniquet/routes/: admin.py
src/tourniquet/static/css/: main.css
src/tourniquet/templates/: base.html  dashboard.html  key_new.html  key_rotated.html  trust.html  usage.html
src/tourniquet/templates/_partials/: action_history.html  alerts_log.html  always_on_guide_linux.html  always_on_guide_windows.html  charts.html  control_panel.html  copy_button_script.html  heatmap.html  help_glossary.html  integration_snippets.html  key_panel.html  setup_guide.html  sidebar.html  spend_now.html  suggestion.html
src/tourniquet/templates/admin/: _layout.html  kill_now_applied.html  (+5 more)
src/tourniquet/triggers/: evaluator.py
static/css/: main.css
templates/: base.html  dashboard.html  key_created.html  landing.html  login.html  usage.html
tests/: conftest.py  test_action_link_replay.py  test_admin_kill_now.py  test_admin_xss.py  test_anthropic_admin.py  test_anthropic_provider.py  test_budget_status.py  test_cli.py  test_config.py  test_dashboard.py  test_formatting.py  test_insights.py  test_lift.py  test_magic_link.py  test_manage_keys.py  test_migrations_sqlite.py  test_notifier.py  test_pricing.py  test_profiles.py  test_proxy.py  test_proxy_concurrency.py  test_slack_socket.py  test_sleep_protection.py  test_suggestions.py  test_telegram_callback.py  test_telegram_poller.py
