[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "tourniquet"
version = "0.1.0"
description = "Anthropic API proxy with hard spend caps"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "psycopg[binary,pool]>=3.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.3",
    "cryptography>=42",
    "resend>=0.8",
    "sentry-sdk[fastapi]>=2.0",
    "itsdangerous>=2.2",
    "bcrypt>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-passlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/tourniquet"]
omit = ["*/migrations/*"]
