[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "tourniquet-dev"
version = "0.1.0"
description = "Anthropic API proxy with hard spend caps"
requires-python = ">=3.11"
authors = [
  {name = "Daniel Lowry", email = "danlowry.357@googlemail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
  "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.19",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.3",
    "cryptography>=42",
    "resend>=0.8",
    "sentry-sdk[fastapi]>=2.0",
    "itsdangerous>=2.2",
    "bcrypt>=4.1",
    "plyer>=2.1",
]

[project.urls]
Homepage = "https://github.com/LowryDaniel/tourniquet"
Repository = "https://github.com/LowryDaniel/tourniquet"
Issues = "https://github.com/LowryDaniel/tourniquet/issues"
Documentation = "https://github.com/LowryDaniel/tourniquet#readme"

[project.optional-dependencies]
postgres = ["psycopg[binary,pool]>=3.1"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-passlib",
]

[project.scripts]
tourniquet = "tourniquet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
tourniquet = ["static/**/*", "templates/**/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/tourniquet"]
omit = ["*/migrations/*"]
